ADDED os and arch to client_list for a quick overview of the clients FIXED report.php check if item is installed FIXED css to wrap text in the pre tag that runs too long

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,6 +384,10 @@ table.client_info {
 .error a:hover, .warning a:hover {
     text-decoration: underline;
 }
+pre.error, pre.warning
+{
+	white-space: pre-wrap;
+}
 
 a.sortheader {
     color: black;
