CHANGED url handling in site_helper views ADDED index_page variable to index.php to cater for setups that cannot use mod_rewrite FIXED style.css layout now looks ok in FF FIXED header.php menubar state now reflects page you're on

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,6 +306,7 @@ table.clientlist {
     border-collapse: collapse;
     border: 1px solid #888;
 	width: 100%;
+	clear: left; /* Firefox */
 }
 
 .clientlist th {
