--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,13 @@ body {
   margin-bottom: 15px;
   padding: 7px 9px;
 }
+/* color for list group items */
+a.list-group-item-danger > .badge
+{
+  background-color: #d9534f;
+}
+
+/* Fix bleeding in legend color box */
 .flotr-legend-color-box *
 {
   box-sizing: content-box;
