Moved around some widgets, added style for scroll-box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,12 @@ a.list-group-item-danger > .badge
   background-color: #d9534f;
 }
 
+/* Scroll box for list widgets */
+.scroll-box
+{
+  height: 200px; overflow-y: scroll;
+}
+
 /* Fix bleeding in legend color box */
 .flotr-legend-color-box *
 {
