Add payload data as tooltip to listing
I added a tooltip to each payload name link on the listing page. I am
not real happy with the implementation - but gives the information.
There is a better way to do this - just not sure how…

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,3 +173,8 @@ h2 {
 .nav-tabs li li i{
   visibility: hidden;
 }
+.tooltip-inner {
+    white-space:pre-wrap;
+    max-width: 600px;
+    text-align: left;
+}
