--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,14 @@
+/* Remove tick lines in OS widget */
+#os-widget .nv-x.nv-axis line {
+    stroke: none;
+    fill: none;
+}
+
+#os-widget .nv-bar{
+    cursor: pointer;
+}
+
+
 body {
   padding-bottom: 40px;
 }
