--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,11 +52,12 @@ a.list-group-item-danger > .badge
 /* Machine button */
 .machine
 {
-  width: 131px;
+  width: 100%;
+  min-width: 150px;
 }
 .machine a.btn-default
 {
-  width: 130px;
+  width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -68,7 +69,7 @@ a.list-group-item-danger > .badge
 }
 .edit a.btn-default
 {
-  width: 110px;
+  width: calc(100% - 20px);
 }
 .edit a.btn-danger
 {
@@ -164,7 +165,7 @@ svg .nv-label text
 }
 
 @media print{
-  
+
   a[href]:after {
     content: "";
   }
